--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource-variable/montserrat": "^5.0.19",
+    "bootstrap": "^5.3.3",
     "vue": "^3.4.29"
   },
   "devDependencies": {
